--- a/home/index.html
+++ b/home/index.html
@@ -63,6 +63,7 @@
       </li>
     </ul>
   </div>
+  <div id="favourite-delete-contextmenu">Delete</div>
 
   <script src="script.js"></script>
 </body>
