--- a/popup/popup.html
+++ b/popup/popup.html
@@ -17,7 +17,7 @@
                 </div>
             </div>
             <div class="menu-option">
-                <a href="#" class="menu-option-text" id="focus-mode-settings">Focus mode settings</a>
+                <a href="settings.html" class="menu-option-text" id="focus-mode-settings">Focus mode settings</a>
             </div>
             <hr>
             <div class="menu-option">
