--- a/home/index.html
+++ b/home/index.html
@@ -8,7 +8,7 @@
   <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
 </head>
   
-<button id="todo-open">&#9776; ToDo List</button>
+<button class="tdOpening">&#9776; ToDo List</button>
 
 
 <body>
@@ -64,6 +64,17 @@
     </ul>
   </div>
   <div id="favourite-delete-contextmenu">Delete</div>
+  <div class="buttons">
+    <a href='https://www.nytimes.com/games/wordle/index.html' target="_blank">
+      <button class="homebutton" >Wordle</button>
+    </a>
+    <a href='https://www.merriam-webster.com/word-of-the-day/calendar' target="_blank">
+      <button class="homebutton">Word of The Day</button>
+    </a>
+    <a href='https://www.forbes.com/quotes/' target="_blank">
+      <button class="homebutton">Quote Of The Day</button>
+    </a>
+  </div>
 
   <script src="script.js"></script>
 </body>
