--- a/popup/popup.html
+++ b/popup/popup.html
@@ -19,10 +19,11 @@
             <div class="menu-option">
                 <a href="settings.html" class="menu-option-text" id="focus-mode-settings">Focus mode settings</a>
             </div>
-            <hr>
-            <div class="menu-option">
+            <!-- <hr> -->
+            <!-- TODO: Implement notifications for todo list. (We couldn't finish this part in time) -->
+            <!-- <div class="menu-option">
                 <a href="#" class="menu-option-text" id="notification-centre">Notification centre <span id="new-notifications" class="show-new-notifications">1</span></a>
-            </div>
+            </div> -->
         </div>
         <script src="popup.js"></script>
     </body>
