--- a/popup/settings.html
+++ b/popup/settings.html
@@ -10,6 +10,8 @@
             <div class="menu-option">
                 <div id="blocked-sites">
                     <p class="menu-option-text">Add/remove sites blocked by focus mode:</p>
+                    <div class="center-align menu-option-text"><button id="add-site">Add site</button></div>
+                    <br>
                 </div>
             </div>
         </div>
